Fixes for footer overlapping.

--- a/resources/assets/sass/all.scss
+++ b/resources/assets/sass/all.scss
@@ -176,6 +176,10 @@ em {
     }
 }
 
+#app {
+    padding-bottom: 300px;
+}
+
 body {
     position: relative;
     min-height: 100vh;
