--- a/resources/assets/sass/app_logged_in.scss
+++ b/resources/assets/sass/app_logged_in.scss
@@ -46,7 +46,3 @@
         }
     }
 }
-
-#app {
-    padding-bottom: 300px;
-}
